--- a/THANKS
+++ b/THANKS
@@ -88,6 +88,7 @@
   Howard Chu			hyc@highlandsun.com
   Ian Lance Taylor		ian@cygnus.com
   Jacob Meuser			jakemsr@jakemsr.com
+  James Su			james.su@gmail.com
   Jeff Squyres			jsquyres@lam-mpi.org
   Jeremy C. Reed		reed@reedmedia.net
   Joel N. Weber II		devnull@gnu.org
