--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-01-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* doc/libtool.texi (Invoking libtool): Document `--tag'.
+	(Tags): New node, backported from HEAD.
+	(Other languages): Adjust.
+	* NEWS: Update.
+
 2007-01-27  James Su <james.su@gmail.com>
 
 	* libltdl/ltdl.c (lt_dlmutex_register): Fix usage of old unlock
