--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/libltdl/lt_system.h: Adjust copyright years.
+
 2007-01-28  Charles Wilson  <libtool@cwilson.fastmail.fm>
 
 	* libltdl/libltdl/lt__private.h (LT_GLOBAL_DATA) [__CYGWIN__]:
