--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-28  Dave Brolley  <brolley@redhat.com>
+
+	* libltdl/ltdl.c (lt_dlexit): Make sure that 'cur' is not NULL
+	before checking that it is still in the list.
+
 2007-01-28  Mike Frysinger  <vapier@gentoo.org>
 
 	* ltmain.in (link mode): Pass through `-p' and `-fprofile-*' for
