--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-28  Charles Wilson  <libtool@cwilson.fastmail.fm>
+
+	* NEWS: Update for Cygwin changes.
+
 2007-01-28  Dave Brolley  <brolley@redhat.com>
 
 	* libltdl/ltdl.c (lt_dlexit): Make sure that 'cur' is not NULL
