--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/lt_dlexit.at: Use $abs_top_srcdir, not $top_srcdir,
+	in the new testsuite.
+
 2007-01-29  Samuel Thibault <samuel.thibault@ens-lyon.org>
 
 	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS) [ gnu ]
