--- a/THANKS
+++ b/THANKS
@@ -88,6 +88,7 @@
   Howard Chu			hyc@highlandsun.com
   Ian Lance Taylor		ian@cygnus.com
   Jacob Meuser			jakemsr@jakemsr.com
+  James Su			james.su@gmail.com
   Jeff Squyres			jsquyres@lam-mpi.org
   Jeremy C. Reed		reed@reedmedia.net
   Joel N. Weber II		devnull@gnu.org
@@ -97,6 +98,7 @@
   Kenneth Albanowski		kjahds@kjahds.com
   Kevin Ryde			user42@zip.com.au
   Kurt D. Zeilenga		Kurt@OpenLDAP.Org
+  Maciej W. Rozycki		macro@linux-mips.org
   Manfred Weichel		Manfred.Weichel@pdb.siemens.de
   Marc Espie			espie@nerim.net
   Marc J. Fraioli		fraioli@dg-rtp.dg.com
