--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2007-02-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* libltdl/ltdl.c (lt_dlexit): Add casts to fix compilation with
+	C++ compiler again.
+
 	* tests/destdir.at: Add `libtool' keyword to tests.
 
 2007-02-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
