--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2007-02-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* tests/convenience.at: Use $CPPFLAGS for compilation.
+	* tests/deplibs-ident.at: Likewise.
+	* tests/duplicate_members.at: Likewise.
+	* tests/inherited_flags.at: Likewise.
+	* tests/link-order.at: Likewise.
+	* tests/stresstest.at: Likewise.
+	* tests/early-libtool.at: Likewise.  Do not quote $CC.
+
 	* libltdl/ltdl.c (lt_dlexit): Add casts to fix compilation with
 	C++ compiler again.
 
