--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2007-02-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* tests/lt_dlexit.at: Do not compile main object with libtool.
+
 	* tests/cmdline_wrap.at: Pass $abs_top_srcdir and $abs_builddir
 	to inner testsuite.
 
