--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-2007-02-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+2007-02-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* doc/libtool.texi: Update copyright years.
+
+2007-02-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/config/general.m4sh (sed_double_backslash): Replace
 	POSIX sed script with a hack that treats up to 10 backslashes
