--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2007-02-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* libltdl/m4/libtool.m4 (_LT_PROG_XSI_SHELLFNS): New function
+	func_opt_split, for XSI and portable shell.
+	* libltdl/config/ltmain.m4sh: Move the insertion point for the
+	configure-generated shell functions to before the first option
+	parsing loop.  Rewrite the separation of the long options to use
+	func_opt_split.
+
+2007-02-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
 	Eliminate roughly a third of the script execution time overhead
 	for all modes except for link/relink and uninstall/clean.
 
