--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2007-02-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* libltdl/config/ltmain.m4sh: Remove duplicate marker for
+	generated shell functions.
+
 	* tests/testsuite.at (LT_AT_NOINST_EXEC_CHECK): New macro, like
 	LT_AT_EXEC_CHECK but uses `$LIBTOOL --mode=execute' and allows
 	to pass `-dlopen MODULE' arguments.
