--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-02-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS) [ osf4, osf5 ]
+	<archive_expsym_cmds>: Use `${wl}-input' not `-input', for
+	cc.  Could use `-input_to_ld'.
+	(_LT_LANG_CXX_CONFIG) [ osf4, osf5 ] <archive_expsym_cmds>:
+	Use `${wl}' instead of `-Wl,', for consistency.
+
 2007-02-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Fix spurious testsuite failures on AIX due on NFS mounts due to
