--- a/THANKS
+++ b/THANKS
@@ -115,6 +115,7 @@
   Stephan Kulow			coolo@kde.org
   Steven M. Schultz		sms@wlv.iipo.gtegsc.com
   Sven Verdoolaege		skimo@liacs.nl
+  Terry D. Dontje		Terry.Dontje@Sun.COM
   Tim Mooney			mooney@dogbert.cc.ndsu.NoDak.edu
   Todd Vierling			tv@pobox.com
   Tom Tromey			tromey@cygnus.com
