--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-02-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS) [ linux ]
+	<whole_archive_flag_spec>: For Sun C/C++ 5.9, do not add
+	/dev/null as dummy object, it fails with GNU ld version
+	2.16.91.0.7-amd-sles9.  Report by Terry D. Dontje.
+	* THANKS: Update.
+
 2007-02-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libtool.m4 (_AS_TEST_PREPARE, AS_EXECUTABLE_P): m4_defun
