--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-02-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* configure.ac: Bump version.
+	* NEWS: Updated.
+
+2007-02-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
 	GNU libtool 1.5.23b is released.
 
 	* configure.ac: Bump version.  Adjust copyright years.
