--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 1.5.23c: 2007-??-??; CVS version 1.5.23c, Libtool team:
+* Bug Fixes.
+
 New in 1.5.23b: 2007-02-17; CVS version 1.5.23a, Libtool team:
 * Initial support for RDOS.
 * Fix regression on DragonFly that disabled library hardcoding.
