--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2007-02-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* HACKING: Update.
+
 	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS) [ linux ]
 	<whole_archive_flag_spec>: For Sun C/C++ 5.9, do not add
 	/dev/null as dummy object, it fails with GNU ld version
