--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2007-02-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER) [ linux |
+	k*bsd*-gnu ]: Fix eval quoting in the DT_RUNPATH test.
+
 	* HACKING: Update.
 
 	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS) [ linux ]
