--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/static.at: Use the right names for the broken libs.
+
 2007-02-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/deplibs-ident.at [aix, hppa*-*-hpux*, interix, openbsd]:
