--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/template.at: Reformat, add M4 quoting.  Use $LDFLAGS
+	consistently for link mode.
+
 2007-02-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/static.at: Use the right names for the broken libs.
