--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-02-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* libltdl/m4/ltdl.m4 (LT_WITH_LTDL): Fix detection of new enough
+	libltdl by actually checking for the declaration of
+	lt_dlinterface_register in ltdl.h with AC_CHECK_DECL.
+	Remove redundant configure output line.
+
 	* tests/template.at: Reformat, add M4 quoting.  Use $LDFLAGS
 	consistently for link mode.
 
